parser/CalculatorParser.java
// Generated from Calculator.g4 by ANTLR 4.7.2

    import java.util.*;
    import java.lang.*;
    import java.util.function.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CalculatorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, COMMENT=34, QUIT=35, ID=36, NUM=37, WS=38, NEWLINE=39;
	public static final int
		RULE_program = 0, RULE_line = 1, RULE_topBoolExpr = 2, RULE_topExpr = 3, 
		RULE_print = 4, RULE_printExpr = 5, RULE_expr = 6, RULE_var = 7, RULE_arr = 8, 
		RULE_function = 9, RULE_boolExpr = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "line", "topBoolExpr", "topExpr", "print", "printExpr", "expr", 
			"var", "arr", "function", "boolExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'print '", "','", "'('", "')'", "'--'", "'++'", "'-'", "'+'", 
			"'^'", "'*'", "'/'", "'%'", "'='", "'^='", "'%='", "'*='", "'/='", "'+='", 
			"'-='", "'['", "']'", "'()'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", 
			"'!'", "'&&'", "'||'", "'true'", "'false'", null, "'quit'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "COMMENT", 
			"QUIT", "ID", "NUM", "WS", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Calculator.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	 
	    static Scanner sc = new Scanner(System.in);
	    static Map<String, Double> memory = new HashMap<String, Double>(); 
	    static Map<String, DoubleFunction<Double>> fx = new HashMap<String, DoubleFunction<Double>>(){
	    {
	            //insert s(), c(), l(), e() into functions
	            put("s", d -> Math.sin(d));
	            put("c", d -> Math.cos(d));
	            put("l", d -> Math.log(d));
	            put("e", d -> Math.exp(d));
	            put("read", d -> sc.nextDouble());
	            put("sqrt", d -> Math.sqrt(d));

	    }
	    };
	    final static double EPSILON = 0.0000000000000000;
	    static boolean print = false;
	    static boolean printDouble = false;

	    

	    private static Double functions(String fName, double d){

	        return fx.get(fName).apply(d);
	    }


	    //returns the previous value
	    private static Double insert(String key, Double value){ return memory.put(key, value); }

	    private static boolean has(String key){ return memory.get(key) != null; }

	    private static Double lookup(String key){ if (!has(key)) insert(key, 0.0); return memory.get(key); }

	public CalculatorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__28) | (1L << T__31) | (1L << T__32) | (1L << ID) | (1L << NUM) | (1L << NEWLINE))) != 0)) {
				{
				{
				setState(22);
				line();
				}
				}
				setState(27);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(CalculatorParser.NEWLINE, 0); }
		public TopExprContext topExpr() {
			return getRuleContext(TopExprContext.class,0);
		}
		public TopBoolExprContext topBoolExpr() {
			return getRuleContext(TopBoolExprContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).exitLine(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(28);
				topExpr();
				}
				break;
			case 2:
				{
				setState(29);
				topBoolExpr();
				}
				break;
			case 3:
				{
				setState(30);
				print();
				}
				break;
			}
			setState(33);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopBoolExprContext extends ParserRuleContext {
		public BoolExprContext boolExpr;
		public BoolExprContext boolExpr() {
			return getRuleContext(BoolExprContext.class,0);
		}
		public TopBoolExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topBoolExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).enterTopBoolExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).exitTopBoolExpr(this);
		}
	}

	public final TopBoolExprContext topBoolExpr() throws RecognitionException {
		TopBoolExprContext _localctx = new TopBoolExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_topBoolExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			((TopBoolExprContext)_localctx).boolExpr = boolExpr(0);
			 if (print) System.out.println(((TopBoolExprContext)_localctx).boolExpr.b); 
			}
			_ctx.stop = _input.LT(-1);
			 print=false; printDouble=false; 
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopExprContext extends ParserRuleContext {
		public ExprContext expr;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TopExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).enterTopExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).exitTopExpr(this);
		}
	}

	public final TopExprContext topExpr() throws RecognitionException {
		TopExprContext _localctx = new TopExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_topExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			((TopExprContext)_localctx).expr = expr(0);
			 if (print) if (Math.abs(((TopExprContext)_localctx).expr.i % 1) <= EPSILON) System.out.println((int)((TopExprContext)_localctx).expr.i); else System.out.printf("%.20f%n", ((TopExprContext)_localctx).expr.i);
			}
			_ctx.stop = _input.LT(-1);
			 print=false; printDouble=false; 
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public List<PrintExprContext> printExpr() {
			return getRuleContexts(PrintExprContext.class);
		}
		public PrintExprContext printExpr(int i) {
			return getRuleContext(PrintExprContext.class,i);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).exitPrint(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_print);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(T__0);
			{
			setState(42);
			printExpr();
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(43);
				match(T__1);
				setState(44);
				printExpr();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintExprContext extends ParserRuleContext {
		public ExprContext expr;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PrintExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).enterPrintExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).exitPrintExpr(this);
		}
	}

	public final PrintExprContext printExpr() throws RecognitionException {
		PrintExprContext _localctx = new PrintExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_printExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			((PrintExprContext)_localctx).expr = expr(0);
			 System.out.print(((PrintExprContext)_localctx).expr.i); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public double i;
		public ExprContext el;
		public ExprContext e;
		public ExprContext expr;
		public VarContext var;
		public FunctionContext function;
		public Token NUM;
		public Token op;
		public ExprContext er;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public TerminalNode NUM() { return getToken(CalculatorParser.NUM, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(54);
				match(T__2);
				setState(55);
				((ExprContext)_localctx).e = ((ExprContext)_localctx).expr = expr(0);
				setState(56);
				match(T__3);
				 ((ExprContext)_localctx).i = ((ExprContext)_localctx).expr.i; print=true;
				}
				break;
			case 2:
				{
				setState(59);
				((ExprContext)_localctx).var = var();
				setState(60);
				match(T__4);
				 ((ExprContext)_localctx).i = insert(((ExprContext)_localctx).var.s, lookup(((ExprContext)_localctx).var.s)-1); print=true;
				}
				break;
			case 3:
				{
				setState(63);
				((ExprContext)_localctx).var = var();
				setState(64);
				match(T__5);
				 ((ExprContext)_localctx).i = insert(((ExprContext)_localctx).var.s, lookup(((ExprContext)_localctx).var.s)+1); print=true;
				}
				break;
			case 4:
				{
				setState(67);
				match(T__4);
				setState(68);
				((ExprContext)_localctx).var = var();
				 insert(((ExprContext)_localctx).var.s, lookup(((ExprContext)_localctx).var.s)-1); ((ExprContext)_localctx).i = lookup(((ExprContext)_localctx).var.s); print=true;
				}
				break;
			case 5:
				{
				setState(71);
				match(T__5);
				setState(72);
				((ExprContext)_localctx).var = var();
				 insert(((ExprContext)_localctx).var.s, lookup(((ExprContext)_localctx).var.s)+1); ((ExprContext)_localctx).i = lookup(((ExprContext)_localctx).var.s); print=true;
				}
				break;
			case 6:
				{
				setState(75);
				match(T__6);
				setState(76);
				((ExprContext)_localctx).var = var();
				 ((ExprContext)_localctx).i = -1.0*lookup(((ExprContext)_localctx).var.s); print=true;
				}
				break;
			case 7:
				{
				setState(79);
				match(T__7);
				setState(80);
				((ExprContext)_localctx).var = var();
				 ((ExprContext)_localctx).i = lookup(((ExprContext)_localctx).var.s); print=true;
				}
				break;
			case 8:
				{
				setState(83);
				((ExprContext)_localctx).function = function();
				 ((ExprContext)_localctx).i = ((ExprContext)_localctx).function.i; print=true; 
				}
				break;
			case 9:
				{
				setState(86);
				((ExprContext)_localctx).NUM = match(NUM);
				 ((ExprContext)_localctx).i = Double.parseDouble((((ExprContext)_localctx).NUM!=null?((ExprContext)_localctx).NUM.getText():null)); print=true;
				}
				break;
			case 10:
				{
				setState(88);
				((ExprContext)_localctx).var = var();
				 ((ExprContext)_localctx).i = lookup(((ExprContext)_localctx).var.s); print=true;
				}
				break;
			case 11:
				{
				setState(91);
				((ExprContext)_localctx).var = var();
				setState(92);
				match(T__12);
				setState(93);
				((ExprContext)_localctx).expr = expr(7);
				 ((ExprContext)_localctx).i = ((ExprContext)_localctx).expr.i; insert(((ExprContext)_localctx).var.s, ((ExprContext)_localctx).expr.i); print=false;
				}
				break;
			case 12:
				{
				setState(96);
				((ExprContext)_localctx).var = var();
				setState(97);
				match(T__13);
				setState(98);
				((ExprContext)_localctx).expr = expr(6);
				 insert(((ExprContext)_localctx).var.s, Math.pow(lookup(((ExprContext)_localctx).var.s), ((ExprContext)_localctx).expr.i)); ((ExprContext)_localctx).i = lookup(((ExprContext)_localctx).var.s); print=false;
				}
				break;
			case 13:
				{
				setState(101);
				((ExprContext)_localctx).var = var();
				setState(102);
				match(T__14);
				setState(103);
				((ExprContext)_localctx).expr = expr(5);
				 insert(((ExprContext)_localctx).var.s, lookup(((ExprContext)_localctx).var.s)%((ExprContext)_localctx).expr.i); ((ExprContext)_localctx).i = lookup(((ExprContext)_localctx).var.s); print=false;
				}
				break;
			case 14:
				{
				setState(106);
				((ExprContext)_localctx).var = var();
				setState(107);
				match(T__15);
				setState(108);
				((ExprContext)_localctx).expr = expr(4);
				 insert(((ExprContext)_localctx).var.s, lookup(((ExprContext)_localctx).var.s)*((ExprContext)_localctx).expr.i); ((ExprContext)_localctx).i = lookup(((ExprContext)_localctx).var.s); print=false;
				}
				break;
			case 15:
				{
				setState(111);
				((ExprContext)_localctx).var = var();
				setState(112);
				match(T__16);
				setState(113);
				((ExprContext)_localctx).expr = expr(3);
				 insert(((ExprContext)_localctx).var.s, lookup(((ExprContext)_localctx).var.s)/((ExprContext)_localctx).expr.i); ((ExprContext)_localctx).i = lookup(((ExprContext)_localctx).var.s); print=false;
				}
				break;
			case 16:
				{
				setState(116);
				((ExprContext)_localctx).var = var();
				setState(117);
				match(T__17);
				setState(118);
				((ExprContext)_localctx).expr = expr(2);
				 insert(((ExprContext)_localctx).var.s, lookup(((ExprContext)_localctx).var.s)+((ExprContext)_localctx).expr.i); ((ExprContext)_localctx).i = lookup(((ExprContext)_localctx).var.s); print=false;
				}
				break;
			case 17:
				{
				setState(121);
				((ExprContext)_localctx).var = var();
				setState(122);
				match(T__18);
				setState(123);
				((ExprContext)_localctx).expr = expr(1);
				 insert(((ExprContext)_localctx).var.s, lookup(((ExprContext)_localctx).var.s)-((ExprContext)_localctx).expr.i); ((ExprContext)_localctx).i = lookup(((ExprContext)_localctx).var.s); print=false;
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(145);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(143);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.el = _prevctx;
						_localctx.el = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(128);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(129);
						((ExprContext)_localctx).op = match(T__8);
						setState(130);
						((ExprContext)_localctx).er = ((ExprContext)_localctx).expr = expr(14);
						 ((ExprContext)_localctx).i = Math.pow(((ExprContext)_localctx).el.i, ((ExprContext)_localctx).er.i); print=true;
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.el = _prevctx;
						_localctx.el = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(133);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(134);
						((ExprContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__11))) != 0)) ) {
							((ExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(135);
						((ExprContext)_localctx).er = ((ExprContext)_localctx).expr = expr(13);
						 if((((ExprContext)_localctx).op!=null?((ExprContext)_localctx).op.getText():null).equals("*")) ((ExprContext)_localctx).i = ((ExprContext)_localctx).el.i*((ExprContext)_localctx).er.i; else if((((ExprContext)_localctx).op!=null?((ExprContext)_localctx).op.getText():null).equals("/")) ((ExprContext)_localctx).i = ((ExprContext)_localctx).el.i/((ExprContext)_localctx).er.i; else if((((ExprContext)_localctx).op!=null?((ExprContext)_localctx).op.getText():null).equals("%")) ((ExprContext)_localctx).i = ((ExprContext)_localctx).el.i%((ExprContext)_localctx).er.i; print=true;
						}
						break;
					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.el = _prevctx;
						_localctx.el = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(138);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(139);
						((ExprContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==T__6 || _la==T__7) ) {
							((ExprContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(140);
						((ExprContext)_localctx).er = ((ExprContext)_localctx).expr = expr(12);
						 if((((ExprContext)_localctx).op!=null?((ExprContext)_localctx).op.getText():null).equals("+")) ((ExprContext)_localctx).i = ((ExprContext)_localctx).el.i+((ExprContext)_localctx).er.i; else if((((ExprContext)_localctx).op!=null?((ExprContext)_localctx).op.getText():null).equals("-")) ((ExprContext)_localctx).i = ((ExprContext)_localctx).el.i-((ExprContext)_localctx).er.i; print=true; 
						}
						break;
					}
					} 
				}
				setState(147);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public String s;
		public Token ID;
		public ArrContext arr;
		public TerminalNode ID() { return getToken(CalculatorParser.ID, 0); }
		public ArrContext arr() {
			return getRuleContext(ArrContext.class,0);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculatorListener ) ((CalculatorListener)listener).exitVar(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_var);
		try {
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				((VarContext)_localctx).ID = match(ID);
				 ((VarContext)_localctx).s =  (((VarContext)_localctx).ID!=null?((VarContext)_localctx).ID.getText():null); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				((VarContext)_localctx).arr = arr();
				 ((VarContext)_localctx).s =  ((VarContext)_localctx).arr.s; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
